--- a/themes/scss/theme_B.scss
+++ b/themes/scss/theme_B.scss
@@ -1,14 +1,16 @@
-/* @theme theme_A */
+/* @theme theme_B */
 
 @use "main";
 
+// web fonts
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap');
+
 $main-text-color: lighten(#000, 25%);
-$main-highlight-color: #3eb370;
+$main-highlight-color: #4b4b4b;
 $main-bg-color: white;
-$main-font-family: "Segoe UI", "メイリオ", sans-serif;
-$main-strong-font-family: $main-font-family;
+$main-font-family: 'Noto Serif JP', sans-serif;
+$main-strong-font-family: 'Noto Sans JP', sans-serif;
 $header-footer-color: lighten(#000, 60%);
-$card-bg-color: #d6e9ca;
 
 h1 {
     font-size: 1.6em;
@@ -25,6 +27,10 @@ h6 {
         font-weight: inherit;
         color: $main-highlight-color;
     }
+    font-family: $main-strong-font-family;
+}
+strong {
+    font-family: $main-strong-font-family;
 }
 
 ul>li{
@@ -36,9 +42,11 @@ ul>li{
         position: absolute;
         top: 0.55em;
         left: -1em;
-        width: 0.5em;
-        height: 0.5em;
-        background-color: $main-highlight-color;
+        width: 0.3em;
+        height: 0.3em;
+        border-radius: 50%;
+        // background-color: $main-highlight-color;
+        border: 0.1em $main-highlight-color solid;
     }
 }
 
@@ -53,7 +61,7 @@ ol>li {
         position: absolute;
         left: -1.2em;
         // font-size: 1.2em;
-        font-weight: bold;
+        font-weight: 900;
         color: $main-highlight-color;
     }
 }
@@ -67,22 +75,23 @@ section {
         justify-content: center;
         background-color: #ffffff;
 
-        h1 {
+        h1:first-of-type {
             padding: initial;
             color: $main-highlight-color;
-            background: initial;
-            border: none;
-            border-radius: initial;
-            box-shadow: initial;
-            color: $main-text-color;
-            font-size: 2rem;
+            position: absolute;
+            left: 0;
+            width: main.$section-width;
+            font-size: 2em;
+            text-align: center;
+            border-top: 1px $main-highlight-color solid;
             border-bottom: 1px $main-highlight-color solid;
-            padding-left: 3rem;
+            line-height: 2em;
 
             >span {
-                color: $main-highlight-color;
-                vertical-align:baseline;
-                margin-right: 1.2em;
+                border-right: 1px $main-highlight-color solid;
+                display: inline-block;
+                margin-right: 1em;
+                padding-right: 1em;
             }
         }
 
@@ -93,7 +102,8 @@ section {
 
     &.cover {
         position: relative;
-        background-color: $main-highlight-color;
+        // background-color: $main-highlight-color;
+        background: linear-gradient(90deg, rgba(40,40,40,1) 0%, rgba(75,75,75,1) 100%);
         justify-content: center;
         padding: 60px;
         font-size: 24px;
@@ -103,16 +113,11 @@ section {
             color: #fff;
         }
 
-        h1 {
-            background-color: initial;
-            box-shadow: none;
-            padding: initial;
-        }
-
         p {
             position: fixed;
             left: 60px;
             bottom: 30px;
+            font-weight: 800;
         }
 
 
@@ -156,12 +161,8 @@ section::after {
 }
 
 .card {
-    background-color: $card-bg-color;
+    background-color: lighten(#000, 95%);
     padding: 1em 1.5em; 
-
-    &.bg_gray {
-        background-color: lighten(#000, 95%);
-    }
 
     &.border,
     &.border_dashed,
@@ -170,21 +171,45 @@ section::after {
         box-shadow: none;
     }
 
-    &.border{
+    &.border {
         border: 0.16em solid $main-highlight-color;
         border-radius: 0.2em;
     }
 
-    &.border_dashed{
+    &.border_dashed {
         border: 0.2em dashed $main-highlight-color;
     }
 
-    &.border_dotted{
+    &.border_dotted {
         border: 0.24em dotted $main-highlight-color;
     }
 
-    &.title>p:first-child{
-        color: darken($main-highlight-color, 15%);
+    &.title {
+        position: relative;
+        margin-top: 0.1em;
+        background-color: $main-bg-color;
+        border: solid 1px $main-highlight-color;
+        border-radius: 1.2em;
+    }
+
+    &.title>p:first-child {
+        display:inline-block;
+        padding: 0 0.4em;
+        background-color: $main-bg-color;
+        position: absolute;
+        top: -0.85em;
+    }
+
+    &.no_bottom{
+        border-bottom: none;
+        border-radius: 30px 30px 0 0;
+        padding-bottom: 0;
+    }
+    
+    &.no_top{
+        border-top: none;
+        border-radius: 0 0 30px 30px;
+        padding-top:0;
     }
 }
 
